kubernetes/base/default-deny-public.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: default-deny-ingress-and-egress
  namespace: public
spec:
  podSelector: {}
  policyTypes: [Ingress, Egress]
